[gd_scene load_steps=4 format=2]

[ext_resource path="res://_tests/TextboxScale/TextboxScaleTest.gd" type="Script" id=1]
[ext_resource path="res://fonts/tomorrow/Tomorrow-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="TextboxScaleTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_right = 160.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
text = "Enter text here"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 320.0
margin_bottom = 220.0
rect_min_size = Vector2( 320, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "TEXT"
text = "TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 320.0
margin_bottom = 398.0

[node name="Label1" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 14.0
text = "Stats"

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 32.0
text = "Stats"

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 50.0
text = "Stats"

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 320.0
margin_bottom = 68.0
text = "Stats"

[node name="Label5" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 86.0
text = "Stats"

[node name="Label6" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 320.0
margin_bottom = 104.0
text = "Stats"

[node name="Label7" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 320.0
margin_bottom = 122.0
text = "Stats"

[node name="Label8" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 320.0
margin_bottom = 140.0
text = "Stats"

[node name="Label9" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 158.0
text = "Stats"
